--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.2",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^4",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "@chakra-ui/icons": "^2.0.10",
+    "@chakra-ui/react": "^2.3.4",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@types/react": "^18.0.21",
+    "@types/uuid": "^8.3.4",
+    "framer-motion": "^7.3.6",
+    "next": "^12.3.1",
+    "next-images": "^1.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
-    "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
@@ -32,6 +36,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
